projects/mamba/tests/cpython/fixtures/type-strict/param_types/errors/next_rejects_non_iterator_argument.py
# /// script
# requires-python = ">=3.12"
# dependencies = []
#
# [tool.mamba]
# bucket = "type-strict"
# lib = "param_types"
# dimension = "errors"
# case = "next_rejects_non_iterator_argument"
# subject = "next"
# kind = "mechanical"
# xfail = ""
# mem_carveout = ""
# source = ""
# status = "filled"
# ///
# mamba-strict-type: TypeError
"""next: next_rejects_non_iterator_argument (errors)."""
try:
    result = next(1)
    print("no_typeerror:", repr(result))
except TypeError as e:
    print("typeerror:", type(e).__name__, str(e)[:80])
